--- a/document/十二月日记.md
+++ b/document/十二月日记.md
@@ -3,5 +3,8 @@
 今天是十二月二十一日，刚回实验室。第一次正式用GitHub，记录一下。
 尝试了几个基本的操作，打算就用这个日记来练手了。
 
+删除了一点很久没有用过的仓库，准备以后就在GitHub里面更新项目了。:smile:
+明天开始调试我的K210看看能不能用我自己的数据集啥的。:calendar::airplane:
+
 ## 12月22日
 
