add some details in night

--- a/document/十二月日记.md
+++ b/document/十二月日记.md
@@ -6,5 +6,9 @@
 删除了一点很久没有用过的仓库，准备以后就在GitHub里面更新项目了。:smile:
 明天开始调试我的K210看看能不能用我自己的数据集啥的。:calendar::airplane:
 
+晚上就和舍友玩一玩吧哈哈
+
+休息一下，明天继续。
+
 ## 12月22日
 
