something in night

--- a/document/十二月日记.md
+++ b/document/十二月日记.md
@@ -1,3 +1,7 @@
+# 2020年
+
+---
+
 ## 12月21日
 
 今天是十二月二十一日，刚回实验室。第一次正式用GitHub，记录一下。
@@ -9,6 +13,10 @@
 晚上就和舍友玩一玩吧哈哈
 
 休息一下，明天继续。
+
+晚上发现键盘坏了，店家说可能是由于驱动的原因后来检查说驱动没有问题，然后淘宝店家就让我重装系统，由于重装系统实在是太麻烦了，而且很多东西都要拷贝复制。所以我就没有继续重装系统，花了99￥买了一个机械键盘。加起来大概花了120￥把我的电脑修理好。:computer:
+
+接下来要吃土了:pensive::meat_on_bone:
 
 ## 12月22日
 
