changed the path name, added the new day 12.22

--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -20,3 +20,7 @@
 
 ## 12月22日
 
+早上已经到实验室了，今天还有一个会议。但是我们依然还是没有把场地搭建起来。感觉事情一下自就多了起来。
+临床的舍友七点多就起来复习去了，但是我对床的舍友还是没有起来:bed:。坚持真的是一件很不容易的事情。
+
+早上泡一杯咖啡真的可以让多巴胺分泌，尽管昨天键盘坏了有点失落，但是泡杯咖啡让我振奋了很多。
