added the account

--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -24,3 +24,9 @@
 临床的舍友七点多就起来复习去了，但是我对床的舍友还是没有起来:bed:。坚持真的是一件很不容易的事情。
 
 早上泡一杯咖啡真的可以让多巴胺分泌，尽管昨天键盘坏了有点失落，但是泡杯咖啡让我振奋了很多。:coffee:
+
+刚刚调试了一下，发现我竟然有两个GitHub的账户，怪不得我commmit了以后，发现:arrow_down:还是没有变换
+
+![image-20201222110028000](image-20201222110028000.png)
+
+所以我改动了一下账户设置，发现有了明显的变化。
