changed the readme file

--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -25,8 +25,9 @@
 
 早上泡一杯咖啡真的可以让多巴胺分泌，尽管昨天键盘坏了有点失落，但是泡杯咖啡让我振奋了很多。:coffee:
 
-刚刚调试了一下，发现我竟然有两个GitHub的账户，怪不得我commmit了以后，发现:arrow_down:还是没有变换
+刚刚调试了一下，发现我竟然有两个GitHub的账户，怪不得我commit了以后，发现:arrow_down:还是没有变换:sweat:
 
 ![image-20201222110028000](image-20201222110028000.png)
 
-所以我改动了一下账户设置，发现有了明显的变化。
+所以我改动了一下账户设置，发现有了明显的变化。:accept:
+
