--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -33,3 +33,5 @@
 
 从今天开始，就要开始新的项目了，加油:fuelpump::strawberry:!!!
 
+今天下午开完会了，主要说的是要先把飞行控制这一块给弄好，然后再精细化。我想的是先用openmv传输好所有的目标，先把识别并放下物体这一块完成，然后再去弄精细化操作。（精确识别图像之类的）
+
