--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -23,7 +23,7 @@
 早上已经到实验室了，今天还有一个会议。但是我们依然还是没有把场地搭建起来。感觉事情一下自就多了起来。
 临床的舍友七点多就起来复习去了，但是我对床的舍友还是没有起来:bed:。坚持真的是一件很不容易的事情。
 
-早上泡一杯咖啡真的可以让多巴胺分泌，尽管昨天键盘坏了有点失落，但是泡杯咖啡让我振奋了很多。:coffee:
+早上泡一杯咖啡真的可以让多巴胺分泌，尽管昨天键盘坏了有点失落，但是泡杯咖啡让我振奋了很多。:coffee:耳机横梁已经收到了，早上花了点时间把它给装好了。:smile:
 
 刚刚调试了一下，发现我竟然有两个GitHub的账户，怪不得我commit了以后，发现:arrow_down:还是没有变换:sweat:
 
@@ -33,5 +33,6 @@
 
 从今天开始，就要开始新的项目了，加油:fuelpump::strawberry:!!!
 
-今天下午开完会了，主要说的是要先把飞行控制这一块给弄好，然后再精细化。我想的是先用openmv传输好所有的目标，先把识别并放下物体这一块完成，然后再去弄精细化操作。（精确识别图像之类的）
+今天下午开完会了，主要说的是要先把飞行控制这一块给弄好，然后再精细化。我想的是先用openmv传输好所有的目标，先把识别并放下物体这一块完成，然后再去弄精细化操作。（精确识别图像之类的）得知今年寒假可以照常放假了，开心~
 
+今天一整个下午都在研究飞控代码，开始发现无法"go to definition"，后来查找资料说，无法进入definition的原因是由于路径里面含有中文路径，所以无法进入。下一步研究了一下这个是怎样处理数据以及怎样使用Maix Docker的UART模块。:deciduous_tree:
