--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -36,3 +36,5 @@
 今天下午开完会了，主要说的是要先把飞行控制这一块给弄好，然后再精细化。我想的是先用openmv传输好所有的目标，先把识别并放下物体这一块完成，然后再去弄精细化操作。（精确识别图像之类的）得知今年寒假可以照常放假了，开心~
 
 今天一整个下午都在研究飞控代码，开始发现无法"go to definition"，后来查找资料说，无法进入definition的原因是由于路径里面含有中文路径，所以无法进入。下一步研究了一下这个是怎样处理数据以及怎样使用Maix Docker的UART模块。:deciduous_tree:
+
+晚上主要就是写了些今天的总结，关于一些代码的具体实现过程与用法，明天希望可以把飞行控制的具体代码给完成。晚上真的很适合听音乐写总结！！！莫名满足:jack_o_lantern::happy::sun_with_face:
