--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -38,3 +38,11 @@
 今天一整个下午都在研究飞控代码，开始发现无法"go to definition"，后来查找资料说，无法进入definition的原因是由于路径里面含有中文路径，所以无法进入。下一步研究了一下这个是怎样处理数据以及怎样使用Maix Docker的UART模块。:deciduous_tree:
 
 晚上主要就是写了些今天的总结，关于一些代码的具体实现过程与用法，明天希望可以把飞行控制的具体代码给完成。晚上真的很适合听音乐写总结！！！莫名满足:jack_o_lantern::happy::sun_with_face:
+
+## 12月23日
+
+今天起来得倒挺早的，但是想和以前一样，吃brunch，然后去实验室。:cake:
+
+所以就打了一会儿游戏，然后我就一直打到了一点多已经接近两点了，碰到的不是队友挂机就是坑没啥游戏体验，最后和舍友玩的几把也是，我Carry的局就是赢不了。害，早知道就直接过来了。现在就有一点罪恶感了哈哈哈，以后可不能这么玩游戏了:computer:
+
+今天要把无人机的场地搭建起来了，不能再拖下去了。
