--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -46,3 +46,9 @@
 所以就打了一会儿游戏，然后我就一直打到了一点多已经接近两点了，碰到的不是队友挂机就是坑没啥游戏体验，最后和舍友玩的几把也是，我Carry的局就是赢不了。害，早知道就直接过来了。现在就有一点罪恶感了哈哈哈，以后可不能这么玩游戏了:computer:
 
 今天要把无人机的场地搭建起来了，不能再拖下去了。
+
+现在已经是晚上了，我一个人在实验室。不得不提一下，今天无人机项目有了很大的进展，最关键的部分就是我们已经把无人机的模型以及实现的方法大致已经弄明白了。:sunny:下一个任务就是调试一下无人机定高飞行，把里面内置的几个函数都看懂。
+
+但是我依然觉得，这种飞控只是给我们调用几个简单的API接口，在飞行控制代码里面，我们还是缺少了自己的知识储备。如何使得飞机能够平稳飞行，如何加入姿态结算，我们还是一点都不知道。我觉得想要正真吃透无人机我们只能自己:rainbow:慢慢啃了。
+
+晚上看了会儿动漫hhh劳逸结合的一天:slightly_smiling_face:
