--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -52,3 +52,9 @@
 但是我依然觉得，这种飞控只是给我们调用几个简单的API接口，在飞行控制代码里面，我们还是缺少了自己的知识储备。如何使得飞机能够平稳飞行，如何加入姿态结算，我们还是一点都不知道。我觉得想要正真吃透无人机我们只能自己:rainbow:慢慢啃了。
 
 晚上看了会儿动漫hhh劳逸结合的一天:slightly_smiling_face:
+
+## 12月24日
+
+昨天是表弟的生日，要不是我妈妈提醒我我就忘记了。也没有去弄那个无人机啥的。感觉明年电赛可以报名了:christmas_tree:明天就是圣诞节啦。
+
+今天上午我啥都没有干。晚上hwd喊我一起去吃自助，看来我中午得少吃一点了哈哈哈。
