--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -58,3 +58,16 @@
 昨天是表弟的生日，要不是我妈妈提醒我我就忘记了。也没有去弄那个无人机啥的。感觉明年电赛可以报名了:christmas_tree:明天就是圣诞节啦。
 
 今天上午我啥都没有干。晚上hwd喊我一起去吃自助，看来我中午得少吃一点了哈哈哈。
+
+## 12月25日
+
+电赛已经报名了，都是无人机项目里面的，队长，我，zwy。
+
+## 12月26日
+
+昨天圣诞节:christmas_tree:时间都花在了过节上面了，所以我并没有记录。今天上午去实验室的时候，发现我们已经在装无人机的架子了。今天估计就是调试飞行了吧。
+
+上午来的时候发现学校里面好多人背着书包，还有几张将近三十的面孔，估计都是来考研究生的吧突然就有一种时光飞逝的感觉。舍友现在都已经出发去了别的学校。希望他们都有一个好成绩吧~:jack_o_lantern:
+
+今后一定要更勤快地去实验室啊，感觉再这样下去就凉了。
+
