--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -71,3 +71,5 @@
 
 今后一定要更勤快地去实验室啊，感觉再这样下去就凉了。
 
+重大进展！我的maix docker终于可以串口传输数据了​！​！​!:fireworks::man_firefighter: :congratulations:除此之外，我害完善了数据，及其应该发送的协议！congratulations：）
+
