--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -73,3 +73,4 @@
 
 重大进展！我的maix docker终于可以串口传输数据了​！​！​!:fireworks::man_firefighter: :congratulations:除此之外，我害完善了数据，及其应该发送的协议！congratulations：）
 
+刚刚打算试一下追车示例程序，因为之前已经仔细研究过了巡线程序了，所以在弄追车程序里面，感觉还是请简单的。很快就把openmv程序以及keil程序烧录到了无人机里面，接下来就只剩下跑一遍了，预祝成功:horse:！
