--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -76,3 +76,8 @@
 刚刚打算试一下追车示例程序，因为之前已经仔细研究过了巡线程序了，所以在弄追车程序里面，感觉还是请简单的。很快就把openmv程序以及keil程序烧录到了无人机里面，接下来就只剩下跑一遍了，预祝成功:horse:！
 
 跑完程序发现，还是有很多东西没有做好，飞机一直往y+的方向偏转，都后来才发现是因为电池没有固定好。现在电池已经没有电了，我们准备以后买两个电池，一个用来试飞，一个用来充电。估计会好很多把。也只能看明天的试飞效果了。
+
+## 12月27日
+
+日常学习，看了看YouTube里面的matlab官方教程，看看建模教程。
+
