--- a/2020年/2020年12月.md
+++ b/2020年/2020年12月.md
@@ -81,3 +81,10 @@
 
 日常学习，看了看YouTube里面的matlab官方教程，看看建模教程。
 
+## 12月29日
+
+今天看了几个实例程序，啊，好难。
+
+上午黄院长给我们开了个电赛总动员会议，里面叫了几个以前参加过电赛的学生以及研究生。:taco:
+
+感觉想要达到他们的高度还是有点困难的，但是我一定会加油的。今天几乎就是一个下午都在看这个东西，只能说耐心不错但是收获甚微。
