--- a/2021年/2021年1月.md
+++ b/2021年/2021年1月.md
@@ -8,3 +8,9 @@
 
 现在在家里面，发现已经没有了Internet。
 
+后来还是网络自己好的
+
+## 1月4日
+
+啊，整个假期过得好颓废啊，回家了就是不想去学习，爸爸说还有三年他就退休了。很想要我找一个公务员当当，给家里面增添收入。也能从我爸的语气里面感受到了对我未来的焦急。可以说是下一代的重担现在到了我的肩膀上了。
+
