--- a/2021年/2021年1月.md
+++ b/2021年/2021年1月.md
@@ -14,3 +14,8 @@
 
 啊，整个假期过得好颓废啊，回家了就是不想去学习，爸爸说还有三年他就退休了。很想要我找一个公务员当当，给家里面增添收入。也能从我爸的语气里面感受到了对我未来的焦急。可以说是下一代的重担现在到了我的肩膀上了。
 
+
+
+## 1月5号
+
+实验室里面的无人机网络已经买好了，还有电池也已经换了新电池了，昨天试着调试了一下。发现循迹的问题也被解决了很开心！照着比赛的思路只要把识别和轨迹规划模块弄好就可以上机测试了吧。
