--- a/2021年/2021年1月.md
+++ b/2021年/2021年1月.md
@@ -19,3 +19,11 @@
 ## 1月5号
 
 实验室里面的无人机网络已经买好了，还有电池也已经换了新电池了，昨天试着调试了一下。发现循迹的问题也被解决了很开心！照着比赛的思路只要把识别和轨迹规划模块弄好就可以上机测试了吧。
+
+## 1月6号
+
+今天是我爸爸的生日。
+
+一大早就发现队长后天考试，所以今天和明天都不来实验室了。所以这几天我就要试试部署yolo了。
+
+害，加油吧。
