--- a/2021年/2021年1月.md
+++ b/2021年/2021年1月.md
@@ -14,8 +14,6 @@
 
 啊，整个假期过得好颓废啊，回家了就是不想去学习，爸爸说还有三年他就退休了。很想要我找一个公务员当当，给家里面增添收入。也能从我爸的语气里面感受到了对我未来的焦急。可以说是下一代的重担现在到了我的肩膀上了。
 
-
-
 ## 1月5号
 
 实验室里面的无人机网络已经买好了，还有电池也已经换了新电池了，昨天试着调试了一下。发现循迹的问题也被解决了很开心！照着比赛的思路只要把识别和轨迹规划模块弄好就可以上机测试了吧。
@@ -31,3 +29,7 @@
 ## 1月7号
 
 今天比以往更早地来到了实验室
+
+## 1月11号
+
+好久没有写日记了，今天实验室里面来了一个学弟，有点羡慕他在一开始做项目的时候能有人指导555。而且是大一就开始做项目了，作为一个大四的，就没有再当时好好抓住机遇。:dancing_men:
