--- a/2021年/2022年2月.md
+++ b/2021年/2022年2月.md
@@ -2,4 +2,6 @@
 
 ## 2.6
 
-在ubuntu系统pull了日记，以后就可以在这个终端写日记了。
+在ubuntu系统pull了日记，以后就可以在这个终端写日记了。:fish:
+
+无人机相关：昨天开了一个会议，说当前最重要的事情，就是把仿真环境建立起来，把环境建立起来以后，我们便可以一步步地上真机去调试无人机。
