--- a/2021年/2021年2月.md
+++ b/2021年/2021年2月.md
@@ -5,3 +5,16 @@
 在ubuntu系统pull了日记，以后就可以在这个终端写日记了。:fish:
 
 无人机相关：昨天开了一个会议，说当前最重要的事情，就是把仿真环境建立起来，把环境建立起来以后，我们便可以一步步地上真机去调试无人机。
+
+## 2.7
+
+建立仿真环境，makefile一路报错，真的是一种折磨。。。吐了。
+
+好多网上都已经找不到报错的原因了，只能自己去排查错误。
+
+
+
+## 2.19
+
+通过不懈的努力，我终于在昨天建立好了所有的仿真环境，今天就要开始仿真了！不得不说这个编译啥的是真的难做XD
+
