--- a/2021年/2021年3月.md
+++ b/2021年/2021年3月.md
@@ -3,3 +3,7 @@
 ## 3.1
 
 现在已经开学啦！从现在开始，无人机项目也好，毕业设计也好，都要开始在实验室里面弄了，明天得早点去实验室。:large_blue_diamond:
+
+## 3.2
+
+昨天的校赛已经选拔结束了，我们取得了第一的好成绩。毕业设计要跟着搞起来了。
