--- a/2021年/2021年3月.md
+++ b/2021年/2021年3月.md
@@ -7,3 +7,13 @@
 ## 3.2
 
 昨天的校赛已经选拔结束了，我们取得了第一的好成绩。毕业设计要跟着搞起来了。
+
+## 3.30
+
+由于网络出了点问题，发现一直push不了这篇日记，所以我就没有写了，到现在发现在虚拟机里面竟然可以push了哈哈。以后还是得继续写日记了呀。
+
+可以说从3.2到现在我们的无人机已经取得了巨大的进展了，我们自己写了一个YOLOv4的程序，并且改了volans的yolo_darknet程序，现在已经可以开始使用了。:ship:得知了yolo_darknet所需要的节点。:national_park:
+
+在目标识别跟踪方面，我们本来用的是基于发布期望位姿来控制无人机的方式，后来发现可能数据存在抖动等问题，这种发布命令的方式并不能达到我们想要的效果，后来重新研究MAVROS发布命令的方式，最终选用发布期望的速度来实现追踪目标的闭环控制，最终取得了不错的效果。:shinto_shrine:
+
+为了准备决赛，我还得熟练应用激光雷达，如果这个知道了怎么运用的话，估计到了最终的比赛应该就没啥问题了吧。:sunny:
