--- a/2021年/2021年3月.md
+++ b/2021年/2021年3月.md
@@ -17,3 +17,9 @@
 在目标识别跟踪方面，我们本来用的是基于发布期望位姿来控制无人机的方式，后来发现可能数据存在抖动等问题，这种发布命令的方式并不能达到我们想要的效果，后来重新研究MAVROS发布命令的方式，最终选用发布期望的速度来实现追踪目标的闭环控制，最终取得了不错的效果。:shinto_shrine:
 
 为了准备决赛，我还得熟练应用激光雷达，如果这个知道了怎么运用的话，估计到了最终的比赛应该就没啥问题了吧。:sunny:
+
+## 3.31
+
+今天是3月的最后一天，学校举办了电赛的入选赛，老师让我们去捧个场，早上jw估计是想让我把程序给写好了，下午参加一下比赛。
+
+ps：毕业设计要开始动了，感觉自己最近的进展好慢啊。
