--- a/2021年/2021年4月.md
+++ b/2021年/2021年4月.md
@@ -13,3 +13,12 @@
 现在是晚上九点半，要抓紧时间洗澡了:bath:。感觉以后这样的996生活还有很多。自己在实验室里面加班已经成了常态，哎。
 
 但愿我可以多学到一点东西吧。
+
+## 4.14日
+
+我感觉我还有好多东要做啊。
+
+## 4.18日
+
+今天继续调试飞机，要在新的程序的基础上，把之前的内容给加上去。
+
